[gd_scene load_steps=5 format=3 uid="uid://wkjaytqbg2uo"]

[ext_resource type="Script" path="res://Scenes/Overlays/TileInfo.gd" id="1_pa6u1"]
[ext_resource type="Texture2D" uid="uid://csht2jkgxicn" path="res://Graphics/Overlays/wood.png" id="1_yfvxf"]
[ext_resource type="Texture2D" uid="uid://f2ambigpxlwv" path="res://Graphics/Overlays/corner.png" id="2_jgbim"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34w8g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TileInfo" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pa6u1")

[node name="TileInfoPanel" type="Panel" parent="."]
offset_left = -2.0
offset_top = 442.0
offset_right = 277.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_34w8g")

[node name="WoodTexture" type="TextureRect" parent="TileInfoPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = -16.0
offset_right = 597.0
offset_bottom = 322.0
texture = ExtResource("1_yfvxf")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = -1.0
offset_right = 167.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.64574, 0.66951, 1, 1)
text = "Tile Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="_TileOwner" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 49.0
offset_right = 96.0
offset_bottom = 72.0
text = "Owner:"

[node name="TileOwner" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 49.0
offset_right = 246.0
offset_bottom = 72.0
text = "-"
horizontal_alignment = 1
clip_text = true

[node name="_TileLevel" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 38.0
offset_top = 159.0
offset_right = 95.0
offset_bottom = 182.0
text = "Level:"

[node name="TileLevel" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 115.0
offset_top = 160.0
offset_right = 172.0
offset_bottom = 183.0
text = "-"

[node name="_TileStat" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 77.0
offset_right = 97.0
offset_bottom = 100.0
text = "Stat:"

[node name="TileStat" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 77.0
offset_right = 171.0
offset_bottom = 100.0
text = "-"

[node name="TileStatModifier" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 102.0
offset_right = 171.0
offset_bottom = 125.0
text = "-"

[node name="_Coordinates" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 122.0
offset_right = 106.0
offset_bottom = 145.0
text = "Position:"

[node name="CoordinateTracker" type="Label" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 125.0
offset_right = 179.0
offset_bottom = 148.0
text = "(-,-)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TileInfoPanel"]
layout_mode = 0
offset_left = 161.0
offset_top = 1.0
offset_right = 283.0
offset_bottom = 122.0
texture = ExtResource("2_jgbim")
expand_mode = 1
flip_h = true
